[package]
name = "tuiql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = "0.20"
anyhow = "1.0.38"
unicode-width = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
argh = "0.1.9"
structopt = "0.3.22"
toml = "0.4"
dirs-next = "2.0"
strum = "0.21"
strum_macros = "0.21"
syntect = { version = "4.5", default-features = false, features = ["metadata", "default-fancy"]}
unicode-segmentation = "1.7"

[target.'cfg(all(target_family="unix",not(target_os="macos")))'.dependencies]
which = "4.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
